--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,5 @@
 {{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
+{{apple-pie name="Yay"}}
 {{!-- Feel free to remove this! --}}
 
 {{outlet}}
